--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title> Test site </title>
-
+   <meta charset="UTF-8">
+   <title> Test site </title>
 </head>
 <body>
-
+  <h1> Test Project /h1>
 </body>
-
 </html>
+
